parser.output
Terminals unused in grammar

   TYPEDEF
   STRUCT
   UNION
   HASH


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: constant
    2                   | IDENTIFIER
    3                   | ROBRAOPEN expression ROBRACLOSE
    4                   | STRING_LITERAL

    5 unary_expression: postfix_expression
    6                 | SIZEOF ROBRAOPEN type_name ROBRACLOSE
    7                 | DEC unary_expression
    8                 | unary_operator cast_expression
    9                 | INC unary_expression
   10                 | SIZEOF unary_expression

   11 postfix_expression: postfix_expression SQBRAOPEN expression SQBRACLOSE
   12                   | primary_expression
   13                   | postfix_expression ROBRAOPEN argument_expression_list ROBRACLOSE
   14                   | postfix_expression ROBRAOPEN ROBRACLOSE
   15                   | ROBRAOPEN type_name ROBRACLOSE CURBRAOPEN initializer_list COMMA CURBRACLOSE
   16                   | postfix_expression DOT IDENTIFIER
   17                   | postfix_expression INC
   18                   | ROBRAOPEN type_name ROBRACLOSE CURBRAOPEN initializer_list CURBRACLOSE
   19                   | postfix_expression ACC IDENTIFIER
   20                   | postfix_expression DEC

   21 constant: CHARACTER_CONSTANT
   22         | ENUMERATION_CONSTANT
   23         | INTEGER_CONSTANT
   24         | FLOATING_CONSTANT

   25 argument_expression_list: argument_expression_list COMMA assignment_expression
   26                         | assignment_expression

   27 cast_expression: ROBRAOPEN type_name ROBRACLOSE cast_expression
   28                | unary_expression

   29 multiplicative_expression: multiplicative_expression MUL cast_expression
   30                          | cast_expression
   31                          | multiplicative_expression MODULO cast_expression
   32                          | multiplicative_expression DIV cast_expression

   33 additive_expression: additive_expression SUB multiplicative_expression
   34                    | additive_expression ADD multiplicative_expression
   35                    | multiplicative_expression

   36 unary_operator: EXCLAIM
   37               | AMP
   38               | SUB
   39               | ADD
   40               | NEG
   41               | MUL

   42 relational_expression: relational_expression BITSHL shift_expression
   43                      | shift_expression
   44                      | relational_expression LTE shift_expression
   45                      | relational_expression GTE shift_expression
   46                      | relational_expression BITSHR shift_expression

   47 exclusive_OR_expression: exclusive_OR_expression BITXOR AND_expression
   48                        | AND_expression

   49 equality_expression: equality_expression EQ relational_expression
   50                    | equality_expression NEQ relational_expression
   51                    | relational_expression

   52 shift_expression: shift_expression SHR additive_expression
   53                 | additive_expression
   54                 | shift_expression SHL additive_expression

   55 inclusive_OR_expression: inclusive_OR_expression BITOR exclusive_OR_expression
   56                        | exclusive_OR_expression

   57 logical_AND_expression: logical_AND_expression N AND M inclusive_OR_expression
   58                       | inclusive_OR_expression

   59 logical_OR_expression: logical_OR_expression N OR M logical_AND_expression
   60                      | logical_AND_expression

   61 M: %empty

   62 AND_expression: AND_expression AMP equality_expression
   63               | equality_expression

   64 assignment_expression: unary_expression assignment_operator assignment_expression
   65                      | conditional_expression

   66 expression: expression COMMA assignment_expression
   67           | assignment_expression

   68 N: %empty

   69 constant_expression: conditional_expression

   70 declaration: declaration_specifiers SEMICOLON
   71            | declaration_specifiers init_declarator_list SEMICOLON

   72 declaration_specifiers: type_specifier
   73                       | type_qualifier declaration_specifiers
   74                       | type_specifier declaration_specifiers
   75                       | storage_class_specifier declaration_specifiers
   76                       | type_qualifier
   77                       | storage_class_specifier
   78                       | function_specifier
   79                       | function_specifier declaration_specifiers

   80 conditional_expression: logical_OR_expression N QUESTION M expression N COLON M conditional_expression
   81                       | logical_OR_expression

   82 init_declarator: declarator ASSIGN initializer
   83                | declarator

   84 storage_class_specifier: AUTO
   85                        | REGISTER
   86                        | STATIC
   87                        | EXTERN

   88 init_declarator_list: init_declarator_list COMMA init_declarator
   89                     | init_declarator

   90 assignment_operator: ASSIGN
   91                    | BINANDEQ
   92                    | BINXOREQ
   93                    | SHLEQ
   94                    | SHREQ
   95                    | BINOREQ
   96                    | DIVEQ
   97                    | PLUSEQ
   98                    | MINUSEQ
   99                    | MODEQ
  100                    | STAREQ

  101 specifier_qualifier_list: type_qualifier specifier_qualifier_list
  102                         | type_qualifier
  103                         | type_specifier specifier_qualifier_list
  104                         | type_specifier

  105 enumerator: IDENTIFIER ASSIGN constant_expression
  106           | IDENTIFIER

  107 enumerator_list: enumerator_list COMMA enumerator
  108                | enumerator

  109 function_specifier: INLINE

  110 type_qualifier: RESTRICT
  111               | VOLATILE
  112               | CONST

  113 pointer: MUL pointer
  114        | MUL type_qualifier_list pointer
  115        | MUL type_qualifier_list
  116        | MUL

  117 parameter_list: parameter_list COMMA parameter_declaration
  118               | parameter_declaration

  119 enum_specifier: ENUM IDENTIFIER
  120               | ENUM IDENTIFIER CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  121               | ENUM CURBRAOPEN enumerator_list CURBRACLOSE
  122               | ENUM IDENTIFIER CURBRAOPEN enumerator_list CURBRACLOSE
  123               | ENUM CURBRAOPEN enumerator_list COMMA CURBRACLOSE

  124 declarator: pointer direct_declarator
  125           | direct_declarator

  126 initializer_list: initializer_list COMMA designation initializer
  127                 | designation initializer
  128                 | initializer_list COMMA initializer
  129                 | initializer

  130 direct_declarator: direct_declarator SQBRAOPEN assignment_expression SQBRACLOSE
  131                  | direct_declarator SQBRAOPEN type_qualifier_list SQBRACLOSE
  132                  | direct_declarator ROBRAOPEN CT parameter_type_list ROBRACLOSE
  133                  | direct_declarator SQBRAOPEN type_qualifier_list assignment_expression SQBRACLOSE
  134                  | ROBRAOPEN declarator ROBRACLOSE
  135                  | IDENTIFIER
  136                  | direct_declarator SQBRAOPEN type_qualifier_list MUL SQBRACLOSE
  137                  | direct_declarator SQBRAOPEN MUL SQBRACLOSE
  138                  | direct_declarator SQBRAOPEN SQBRACLOSE
  139                  | direct_declarator SQBRAOPEN STATIC type_qualifier_list assignment_expression SQBRACLOSE
  140                  | direct_declarator SQBRAOPEN STATIC assignment_expression SQBRACLOSE
  141                  | direct_declarator ROBRAOPEN identifier_list ROBRACLOSE
  142                  | direct_declarator ROBRAOPEN CT ROBRACLOSE

  143 type_specifier: COMPLEX
  144               | IMAGINARY
  145               | VOID
  146               | FLOAT
  147               | SIGNED
  148               | UNSIGNED
  149               | CHAR
  150               | INT
  151               | LONG
  152               | BOOL
  153               | DOUBLE
  154               | SHORT
  155               | enum_specifier

  156 CT: %empty

  157 type_qualifier_list: type_qualifier_list type_qualifier
  158                    | type_qualifier

  159 identifier_list: identifier_list COMMA IDENTIFIER
  160                | IDENTIFIER

  161 type_name: specifier_qualifier_list

  162 initializer: CURBRAOPEN initializer_list COMMA CURBRACLOSE
  163            | CURBRAOPEN initializer_list CURBRACLOSE
  164            | assignment_expression

  165 designation: designator_list ASSIGN

  166 designator_list: designator_list designator
  167                | designator

  168 designator: DOT IDENTIFIER
  169           | SQBRAOPEN constant_expression SQBRACLOSE

  170 labeled_statement: DEFAULT COLON statement
  171                  | CASE constant_expression COLON statement
  172                  | IDENTIFIER COLON statement

  173 compound_statement: CURBRAOPEN block_item_list CURBRACLOSE
  174                   | CURBRAOPEN CURBRACLOSE

  175 declaration_list: declaration_list declaration
  176                 | declaration

  177 block_item_list: block_item_list M block_item
  178                | block_item

  179 function_definition: declaration_specifiers declarator CT compound_statement
  180                    | declaration_specifiers declarator declaration_list CT compound_statement

  181 expression_statement: SEMICOLON
  182                     | expression SEMICOLON

  183 parameter_type_list: parameter_list COMMA DOTS
  184                    | parameter_list

  185 parameter_declaration: declaration_specifiers
  186                      | declaration_specifiers declarator

  187 selection_statement: IF ROBRAOPEN expression N ROBRACLOSE M statement N ELSE M statement
  188                    | SWITCH ROBRAOPEN expression ROBRACLOSE statement
  189                    | IF ROBRAOPEN expression N ROBRACLOSE M statement N

  190 statement: iteration_statement
  191          | jump_statement
  192          | compound_statement
  193          | expression_statement
  194          | selection_statement
  195          | labeled_statement

  196 jump_statement: CONTINUE SEMICOLON
  197               | RETURN SEMICOLON
  198               | GOTO IDENTIFIER SEMICOLON
  199               | RETURN expression SEMICOLON
  200               | BREAK SEMICOLON

  201 translation_unit: translation_unit external_declaration
  202                 | external_declaration

  203 external_declaration: declaration
  204                     | function_definition

  205 iteration_statement: DO M statement M WHILE ROBRAOPEN expression ROBRACLOSE SEMICOLON
  206                    | WHILE M ROBRAOPEN expression ROBRACLOSE M statement
  207                    | FOR ROBRAOPEN expression_statement M expression_statement M expression N ROBRACLOSE M statement
  208                    | FOR ROBRAOPEN expression_statement M expression_statement ROBRACLOSE M statement

  209 block_item: statement
  210           | declaration


Terminals, with rules where they appear

$end (0) 0
error (256)
CHARACTER_CONSTANT (258) 21
ENUMERATION_CONSTANT (259) 22
FLOATING_CONSTANT (260) 24
INTEGER_CONSTANT (261) 23
IDENTIFIER (262) 2 16 19 105 106 119 120 122 135 159 160 168 172 198
STRING_LITERAL (263) 4
SHREQ (264) 94
ENUM (265) 119 120 121 122 123
SQBRAOPEN (266) 11 130 131 133 136 137 138 139 140 169
DEC (267) 7 20
CONST (268) 112
SHORT (269) 154
ROBRACLOSE (270) 3 6 13 14 15 18 27 132 134 141 142 187 188 189 205
    206 207 208
AUTO (271) 84
CONTINUE (272) 196
IF (273) 187 189
BINOREQ (274) 95
COMMA (275) 15 25 66 88 107 117 120 123 126 128 159 162 183
MINUSEQ (276) 98
SHLEQ (277) 93
BREAK (278) 200
EXTERN (279) 87
RETURN (280) 197 199
GOTO (281) 198
DOUBLE (282) 153
LONG (283) 151
TYPEDEF (284)
ELSE (285) 187
CURBRACLOSE (286) 15 18 120 121 122 123 162 163 173 174
DOT (287) 16 168
ACC (288) 19
INC (289) 9 17
AMP (290) 37 62
MUL (291) 29 41 113 114 115 116 136 137
ADD (292) 34 39
SUB (293) 33 38
NEG (294) 40
EXCLAIM (295) 36
BINANDEQ (296) 91
BINXOREQ (297) 92
CURBRAOPEN (298) 15 18 120 121 122 123 162 163 173 174
SHL (299) 54
SHR (300) 52
DOTS (301) 183
STAREQ (302) 100
DIVEQ (303) 96
DEFAULT (304) 170
INLINE (305) 109
REGISTER (306) 85
WHILE (307) 205 206
SQBRACLOSE (308) 11 130 131 133 136 137 138 139 140 169
ROBRAOPEN (309) 3 6 13 14 15 18 27 132 134 141 142 187 188 189 205
    206 207 208
DIV (310) 32
MODULO (311) 31
STRUCT (312)
VOLATILE (313) 111
MODEQ (314) 99
PLUSEQ (315) 97
ASSIGN (316) 82 90 105 165
CHAR (317) 149
FOR (318) 207 208
SIGNED (319) 147
RESTRICT (320) 110
UNSIGNED (321) 148
EQ (322) 49
UNION (323)
COMPLEX (324) 143
GTE (325) 45
NEQ (326) 50
HASH (327)
BITSHL (328) 42
BITSHR (329) 46
LTE (330) 44
BITXOR (331) 47
BITOR (332) 55
AND (333) 57
VOID (334) 145
OR (335) 59
QUESTION (336) 80
COLON (337) 80 170 171 172
SEMICOLON (338) 70 71 181 182 196 197 198 199 200 205
CASE (339) 171
FLOAT (340) 146
STATIC (341) 86 139 140
SIZEOF (342) 6 10
BOOL (343) 152
IMAGINARY (344) 144
DO (345) 205
INT (346) 150
SWITCH (347) 188
THEN (348)


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
primary_expression (95)
    on left: 1 2 3 4, on right: 12
unary_expression (96)
    on left: 5 6 7 8 9 10, on right: 7 9 10 28 64
postfix_expression (97)
    on left: 11 12 13 14 15 16 17 18 19 20, on right: 5 11 13 14 16
    17 19 20
constant (98)
    on left: 21 22 23 24, on right: 1
argument_expression_list (99)
    on left: 25 26, on right: 13 25
cast_expression (100)
    on left: 27 28, on right: 8 27 29 30 31 32
multiplicative_expression (101)
    on left: 29 30 31 32, on right: 29 31 32 33 34 35
additive_expression (102)
    on left: 33 34 35, on right: 33 34 52 53 54
unary_operator (103)
    on left: 36 37 38 39 40 41, on right: 8
relational_expression (104)
    on left: 42 43 44 45 46, on right: 42 44 45 46 49 50 51
exclusive_OR_expression (105)
    on left: 47 48, on right: 47 55 56
equality_expression (106)
    on left: 49 50 51, on right: 49 50 62 63
shift_expression (107)
    on left: 52 53 54, on right: 42 43 44 45 46 52 54
inclusive_OR_expression (108)
    on left: 55 56, on right: 55 57 58
logical_AND_expression (109)
    on left: 57 58, on right: 57 59 60
logical_OR_expression (110)
    on left: 59 60, on right: 59 80 81
M (111)
    on left: 61, on right: 57 59 80 177 187 189 205 206 207 208
AND_expression (112)
    on left: 62 63, on right: 47 48 62
assignment_expression (113)
    on left: 64 65, on right: 25 26 64 66 67 130 133 139 140 164
expression (114)
    on left: 66 67, on right: 3 11 66 80 182 187 188 189 199 205 206
    207
N (115)
    on left: 68, on right: 57 59 80 187 189 207
constant_expression (116)
    on left: 69, on right: 105 169 171
declaration (117)
    on left: 70 71, on right: 175 176 203 210
declaration_specifiers (118)
    on left: 72 73 74 75 76 77 78 79, on right: 70 71 73 74 75 79 179
    180 185 186
conditional_expression (119)
    on left: 80 81, on right: 65 69 80
init_declarator (120)
    on left: 82 83, on right: 88 89
storage_class_specifier (121)
    on left: 84 85 86 87, on right: 75 77
init_declarator_list (122)
    on left: 88 89, on right: 71 88
assignment_operator (123)
    on left: 90 91 92 93 94 95 96 97 98 99 100, on right: 64
specifier_qualifier_list (124)
    on left: 101 102 103 104, on right: 101 103 161
enumerator (125)
    on left: 105 106, on right: 107 108
enumerator_list (126)
    on left: 107 108, on right: 107 120 121 122 123
function_specifier (127)
    on left: 109, on right: 78 79
type_qualifier (128)
    on left: 110 111 112, on right: 73 76 101 102 157 158
pointer (129)
    on left: 113 114 115 116, on right: 113 114 124
parameter_list (130)
    on left: 117 118, on right: 117 183 184
enum_specifier (131)
    on left: 119 120 121 122 123, on right: 155
declarator (132)
    on left: 124 125, on right: 82 83 134 179 180 186
initializer_list (133)
    on left: 126 127 128 129, on right: 15 18 126 128 162 163
direct_declarator (134)
    on left: 130 131 132 133 134 135 136 137 138 139 140 141 142, on right:
    124 125 130 131 132 133 136 137 138 139 140 141 142
type_specifier (135)
    on left: 143 144 145 146 147 148 149 150 151 152 153 154 155, on right:
    72 74 103 104
CT (136)
    on left: 156, on right: 132 142 179 180
type_qualifier_list (137)
    on left: 157 158, on right: 114 115 131 133 136 139 157
identifier_list (138)
    on left: 159 160, on right: 141 159
type_name (139)
    on left: 161, on right: 6 15 18 27
initializer (140)
    on left: 162 163 164, on right: 82 126 127 128 129
designation (141)
    on left: 165, on right: 126 127
designator_list (142)
    on left: 166 167, on right: 165 166
designator (143)
    on left: 168 169, on right: 166 167
labeled_statement (144)
    on left: 170 171 172, on right: 195
compound_statement (145)
    on left: 173 174, on right: 179 180 192
declaration_list (146)
    on left: 175 176, on right: 175 180
block_item_list (147)
    on left: 177 178, on right: 173 177
function_definition (148)
    on left: 179 180, on right: 204
expression_statement (149)
    on left: 181 182, on right: 193 207 208
parameter_type_list (150)
    on left: 183 184, on right: 132
parameter_declaration (151)
    on left: 185 186, on right: 117 118
selection_statement (152)
    on left: 187 188 189, on right: 194
statement (153)
    on left: 190 191 192 193 194 195, on right: 170 171 172 187 188
    189 205 206 207 208 209
jump_statement (154)
    on left: 196 197 198 199 200, on right: 191
translation_unit (155)
    on left: 201 202, on right: 0 201
external_declaration (156)
    on left: 203 204, on right: 201 202
iteration_statement (157)
    on left: 205 206 207 208, on right: 190
block_item (158)
    on left: 209 210, on right: 177 178


State 0

    0 $accept: . translation_unit $end

    ENUM       shift, and go to state 1
    CONST      shift, and go to state 2
    SHORT      shift, and go to state 3
    AUTO       shift, and go to state 4
    EXTERN     shift, and go to state 5
    DOUBLE     shift, and go to state 6
    LONG       shift, and go to state 7
    INLINE     shift, and go to state 8
    REGISTER   shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    RESTRICT   shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    COMPLEX    shift, and go to state 15
    VOID       shift, and go to state 16
    FLOAT      shift, and go to state 17
    STATIC     shift, and go to state 18
    BOOL       shift, and go to state 19
    IMAGINARY  shift, and go to state 20
    INT        shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    function_specifier       go to state 25
    type_qualifier           go to state 26
    enum_specifier           go to state 27
    type_specifier           go to state 28
    function_definition      go to state 29
    translation_unit         go to state 30
    external_declaration     go to state 31


State 1

  119 enum_specifier: ENUM . IDENTIFIER
  120               | ENUM . IDENTIFIER CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  121               | ENUM . CURBRAOPEN enumerator_list CURBRACLOSE
  122               | ENUM . IDENTIFIER CURBRAOPEN enumerator_list CURBRACLOSE
  123               | ENUM . CURBRAOPEN enumerator_list COMMA CURBRACLOSE

    IDENTIFIER  shift, and go to state 32
    CURBRAOPEN  shift, and go to state 33


State 2

  112 type_qualifier: CONST .

    $default  reduce using rule 112 (type_qualifier)


State 3

  154 type_specifier: SHORT .

    $default  reduce using rule 154 (type_specifier)


State 4

   84 storage_class_specifier: AUTO .

    $default  reduce using rule 84 (storage_class_specifier)


State 5

   87 storage_class_specifier: EXTERN .

    $default  reduce using rule 87 (storage_class_specifier)


State 6

  153 type_specifier: DOUBLE .

    $default  reduce using rule 153 (type_specifier)


State 7

  151 type_specifier: LONG .

    $default  reduce using rule 151 (type_specifier)


State 8

  109 function_specifier: INLINE .

    $default  reduce using rule 109 (function_specifier)


State 9

   85 storage_class_specifier: REGISTER .

    $default  reduce using rule 85 (storage_class_specifier)


State 10

  111 type_qualifier: VOLATILE .

    $default  reduce using rule 111 (type_qualifier)


State 11

  149 type_specifier: CHAR .

    $default  reduce using rule 149 (type_specifier)


State 12

  147 type_specifier: SIGNED .

    $default  reduce using rule 147 (type_specifier)


State 13

  110 type_qualifier: RESTRICT .

    $default  reduce using rule 110 (type_qualifier)


State 14

  148 type_specifier: UNSIGNED .

    $default  reduce using rule 148 (type_specifier)


State 15

  143 type_specifier: COMPLEX .

    $default  reduce using rule 143 (type_specifier)


State 16

  145 type_specifier: VOID .

    $default  reduce using rule 145 (type_specifier)


State 17

  146 type_specifier: FLOAT .

    $default  reduce using rule 146 (type_specifier)


State 18

   86 storage_class_specifier: STATIC .

    $default  reduce using rule 86 (storage_class_specifier)


State 19

  152 type_specifier: BOOL .

    $default  reduce using rule 152 (type_specifier)


State 20

  144 type_specifier: IMAGINARY .

    $default  reduce using rule 144 (type_specifier)


State 21

  150 type_specifier: INT .

    $default  reduce using rule 150 (type_specifier)


State 22

  203 external_declaration: declaration .

    $default  reduce using rule 203 (external_declaration)


State 23

   70 declaration: declaration_specifiers . SEMICOLON
   71            | declaration_specifiers . init_declarator_list SEMICOLON
  179 function_definition: declaration_specifiers . declarator CT compound_statement
  180                    | declaration_specifiers . declarator declaration_list CT compound_statement

    IDENTIFIER  shift, and go to state 34
    MUL         shift, and go to state 35
    ROBRAOPEN   shift, and go to state 36
    SEMICOLON   shift, and go to state 37

    init_declarator       go to state 38
    init_declarator_list  go to state 39
    pointer               go to state 40
    declarator            go to state 41
    direct_declarator     go to state 42


State 24

   75 declaration_specifiers: storage_class_specifier . declaration_specifiers
   77                       | storage_class_specifier .

    ENUM       shift, and go to state 1
    CONST      shift, and go to state 2
    SHORT      shift, and go to state 3
    AUTO       shift, and go to state 4
    EXTERN     shift, and go to state 5
    DOUBLE     shift, and go to state 6
    LONG       shift, and go to state 7
    INLINE     shift, and go to state 8
    REGISTER   shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    RESTRICT   shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    COMPLEX    shift, and go to state 15
    VOID       shift, and go to state 16
    FLOAT      shift, and go to state 17
    STATIC     shift, and go to state 18
    BOOL       shift, and go to state 19
    IMAGINARY  shift, and go to state 20
    INT        shift, and go to state 21

    $default  reduce using rule 77 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    function_specifier       go to state 25
    type_qualifier           go to state 26
    enum_specifier           go to state 27
    type_specifier           go to state 28


State 25

   78 declaration_specifiers: function_specifier .
   79                       | function_specifier . declaration_specifiers

    ENUM       shift, and go to state 1
    CONST      shift, and go to state 2
    SHORT      shift, and go to state 3
    AUTO       shift, and go to state 4
    EXTERN     shift, and go to state 5
    DOUBLE     shift, and go to state 6
    LONG       shift, and go to state 7
    INLINE     shift, and go to state 8
    REGISTER   shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    RESTRICT   shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    COMPLEX    shift, and go to state 15
    VOID       shift, and go to state 16
    FLOAT      shift, and go to state 17
    STATIC     shift, and go to state 18
    BOOL       shift, and go to state 19
    IMAGINARY  shift, and go to state 20
    INT        shift, and go to state 21

    $default  reduce using rule 78 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    function_specifier       go to state 25
    type_qualifier           go to state 26
    enum_specifier           go to state 27
    type_specifier           go to state 28


State 26

   73 declaration_specifiers: type_qualifier . declaration_specifiers
   76                       | type_qualifier .

    ENUM       shift, and go to state 1
    CONST      shift, and go to state 2
    SHORT      shift, and go to state 3
    AUTO       shift, and go to state 4
    EXTERN     shift, and go to state 5
    DOUBLE     shift, and go to state 6
    LONG       shift, and go to state 7
    INLINE     shift, and go to state 8
    REGISTER   shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    RESTRICT   shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    COMPLEX    shift, and go to state 15
    VOID       shift, and go to state 16
    FLOAT      shift, and go to state 17
    STATIC     shift, and go to state 18
    BOOL       shift, and go to state 19
    IMAGINARY  shift, and go to state 20
    INT        shift, and go to state 21

    $default  reduce using rule 76 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    function_specifier       go to state 25
    type_qualifier           go to state 26
    enum_specifier           go to state 27
    type_specifier           go to state 28


State 27

  155 type_specifier: enum_specifier .

    $default  reduce using rule 155 (type_specifier)


State 28

   72 declaration_specifiers: type_specifier .
   74                       | type_specifier . declaration_specifiers

    ENUM       shift, and go to state 1
    CONST      shift, and go to state 2
    SHORT      shift, and go to state 3
    AUTO       shift, and go to state 4
    EXTERN     shift, and go to state 5
    DOUBLE     shift, and go to state 6
    LONG       shift, and go to state 7
    INLINE     shift, and go to state 8
    REGISTER   shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    RESTRICT   shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    COMPLEX    shift, and go to state 15
    VOID       shift, and go to state 16
    FLOAT      shift, and go to state 17
    STATIC     shift, and go to state 18
    BOOL       shift, and go to state 19
    IMAGINARY  shift, and go to state 20
    INT        shift, and go to state 21

    $default  reduce using rule 72 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    function_specifier       go to state 25
    type_qualifier           go to state 26
    enum_specifier           go to state 27
    type_specifier           go to state 28


State 29

  204 external_declaration: function_definition .

    $default  reduce using rule 204 (external_declaration)


State 30

    0 $accept: translation_unit . $end
  201 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 47
    ENUM       shift, and go to state 1
    CONST      shift, and go to state 2
    SHORT      shift, and go to state 3
    AUTO       shift, and go to state 4
    EXTERN     shift, and go to state 5
    DOUBLE     shift, and go to state 6
    LONG       shift, and go to state 7
    INLINE     shift, and go to state 8
    REGISTER   shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    RESTRICT   shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    COMPLEX    shift, and go to state 15
    VOID       shift, and go to state 16
    FLOAT      shift, and go to state 17
    STATIC     shift, and go to state 18
    BOOL       shift, and go to state 19
    IMAGINARY  shift, and go to state 20
    INT        shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    function_specifier       go to state 25
    type_qualifier           go to state 26
    enum_specifier           go to state 27
    type_specifier           go to state 28
    function_definition      go to state 29
    external_declaration     go to state 48


State 31

  202 translation_unit: external_declaration .

    $default  reduce using rule 202 (translation_unit)


State 32

  119 enum_specifier: ENUM IDENTIFIER .
  120               | ENUM IDENTIFIER . CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  122               | ENUM IDENTIFIER . CURBRAOPEN enumerator_list CURBRACLOSE

    CURBRAOPEN  shift, and go to state 49

    $default  reduce using rule 119 (enum_specifier)


State 33

  121 enum_specifier: ENUM CURBRAOPEN . enumerator_list CURBRACLOSE
  123               | ENUM CURBRAOPEN . enumerator_list COMMA CURBRACLOSE

    IDENTIFIER  shift, and go to state 50

    enumerator       go to state 51
    enumerator_list  go to state 52


State 34

  135 direct_declarator: IDENTIFIER .

    $default  reduce using rule 135 (direct_declarator)


State 35

  113 pointer: MUL . pointer
  114        | MUL . type_qualifier_list pointer
  115        | MUL . type_qualifier_list
  116        | MUL .

    CONST     shift, and go to state 2
    MUL       shift, and go to state 35
    VOLATILE  shift, and go to state 10
    RESTRICT  shift, and go to state 13

    $default  reduce using rule 116 (pointer)

    type_qualifier       go to state 53
    pointer              go to state 54
    type_qualifier_list  go to state 55


State 36

  134 direct_declarator: ROBRAOPEN . declarator ROBRACLOSE

    IDENTIFIER  shift, and go to state 34
    MUL         shift, and go to state 35
    ROBRAOPEN   shift, and go to state 36

    pointer            go to state 40
    declarator         go to state 56
    direct_declarator  go to state 42


State 37

   70 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 70 (declaration)


State 38

   89 init_declarator_list: init_declarator .

    $default  reduce using rule 89 (init_declarator_list)


State 39

   71 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   88 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA      shift, and go to state 57
    SEMICOLON  shift, and go to state 58


State 40

  124 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 34
    ROBRAOPEN   shift, and go to state 36

    direct_declarator  go to state 59


State 41

   82 init_declarator: declarator . ASSIGN initializer
   83                | declarator .
  179 function_definition: declaration_specifiers declarator . CT compound_statement
  180                    | declaration_specifiers declarator . declaration_list CT compound_statement

    ENUM       shift, and go to state 1
    CONST      shift, and go to state 2
    SHORT      shift, and go to state 3
    AUTO       shift, and go to state 4
    EXTERN     shift, and go to state 5
    DOUBLE     shift, and go to state 6
    LONG       shift, and go to state 7
    INLINE     shift, and go to state 8
    REGISTER   shift, and go to state 9
    VOLATILE   shift, and go to state 10
    ASSIGN     shift, and go to state 60
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    RESTRICT   shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    COMPLEX    shift, and go to state 15
    VOID       shift, and go to state 16
    FLOAT      shift, and go to state 17
    STATIC     shift, and go to state 18
    BOOL       shift, and go to state 19
    IMAGINARY  shift, and go to state 20
    INT        shift, and go to state 21

    CURBRAOPEN  reduce using rule 156 (CT)
    $default    reduce using rule 83 (init_declarator)

    declaration              go to state 61
    declaration_specifiers   go to state 62
    storage_class_specifier  go to state 24
    function_specifier       go to state 25
    type_qualifier           go to state 26
    enum_specifier           go to state 27
    type_specifier           go to state 28
    CT                       go to state 63
    declaration_list         go to state 64


State 42

  125 declarator: direct_declarator .
  130 direct_declarator: direct_declarator . SQBRAOPEN assignment_expression SQBRACLOSE
  131                  | direct_declarator . SQBRAOPEN type_qualifier_list SQBRACLOSE
  132                  | direct_declarator . ROBRAOPEN CT parameter_type_list ROBRACLOSE
  133                  | direct_declarator . SQBRAOPEN type_qualifier_list assignment_expression SQBRACLOSE
  136                  | direct_declarator . SQBRAOPEN type_qualifier_list MUL SQBRACLOSE
  137                  | direct_declarator . SQBRAOPEN MUL SQBRACLOSE
  138                  | direct_declarator . SQBRAOPEN SQBRACLOSE
  139                  | direct_declarator . SQBRAOPEN STATIC type_qualifier_list assignment_expression SQBRACLOSE
  140                  | direct_declarator . SQBRAOPEN STATIC assignment_expression SQBRACLOSE
  141                  | direct_declarator . ROBRAOPEN identifier_list ROBRACLOSE
  142                  | direct_declarator . ROBRAOPEN CT ROBRACLOSE

    SQBRAOPEN  shift, and go to state 65
    ROBRAOPEN  shift, and go to state 66

    $default  reduce using rule 125 (declarator)


State 43

   75 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 75 (declaration_specifiers)


State 44

   79 declaration_specifiers: function_specifier declaration_specifiers .

    $default  reduce using rule 79 (declaration_specifiers)


State 45

   73 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 73 (declaration_specifiers)


State 46

   74 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 74 (declaration_specifiers)


State 47

    0 $accept: translation_unit $end .

    $default  accept


State 48

  201 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 201 (translation_unit)


State 49

  120 enum_specifier: ENUM IDENTIFIER CURBRAOPEN . enumerator_list COMMA CURBRACLOSE
  122               | ENUM IDENTIFIER CURBRAOPEN . enumerator_list CURBRACLOSE

    IDENTIFIER  shift, and go to state 50

    enumerator       go to state 51
    enumerator_list  go to state 67


State 50

  105 enumerator: IDENTIFIER . ASSIGN constant_expression
  106           | IDENTIFIER .

    ASSIGN  shift, and go to state 68

    $default  reduce using rule 106 (enumerator)


State 51

  108 enumerator_list: enumerator .

    $default  reduce using rule 108 (enumerator_list)


State 52

  107 enumerator_list: enumerator_list . COMMA enumerator
  121 enum_specifier: ENUM CURBRAOPEN enumerator_list . CURBRACLOSE
  123               | ENUM CURBRAOPEN enumerator_list . COMMA CURBRACLOSE

    COMMA        shift, and go to state 69
    CURBRACLOSE  shift, and go to state 70


State 53

  158 type_qualifier_list: type_qualifier .

    $default  reduce using rule 158 (type_qualifier_list)


State 54

  113 pointer: MUL pointer .
